[package]
name = "erotic-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
sqlx = { version = "0.7.2", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
] }
anyhow = "1.0"
dotenvy = "0.15.7"
async-trait = "0.1"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.9.0"
log = "0.4.22"
config = {version = "0.14.1", features = ["yaml"]}
uuid = { version = "1.11.0", features = ["v4"] }
test-context = "0.3.0"
