[package]
name = "erotic-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = "0.23.3"
gstreamer-video = "0.23.3"
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
deadpool-redis = { version = "0.16.0", features = ["rt_tokio_1"] }
redis = { version = "0.26.1", default-features = false, features = [
  "tokio-native-tls",
] }
anyhow = "1.0"
dotenvy = "0.15.7"
async-trait = "0.1"
chrono = {version =  "0.4.38", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["redis-session", "redis-pool"] }
actix-identity = { version = "0.8.0" }
actix-web-grants = {version = "4.1.1"}
actix-files = { version = "0.6.6", features = ["tokio-uring"] }
askama = { version = "0.12.1", features = ["with-actix-web"] }
askama_actix = "0.14.0"
log = "0.4.22"
actix-rt = "2.10.0"
env_logger = "0.11.5"
actix-multipart = "0.7.2"
tempfile = "3.14.0"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
config = {version = "0.14.1", features = ["yaml"]}
askama-filters = "0.1.3"
test-context = "0.3.0"
validator = { version = "0.19", features = ["derive"] }
regex = { version = "1", default-features = false, features = ["std"] }
once_cell = "1.18.0"
futures-util = "0.3.31"
http = "0.2.12"
futures = "0.3.31"
bcrypt = "0.16.0"
image = "0.24"

[dev-dependencies]
actix-multipart-test = "0.0.3"